[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.4"
iai = "0.1"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[features]
day01 = []
default = ["day01"]

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "iai"
harness = false
