[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1"

[dev-dependencies]
cfg-if = "1"
criterion = "0.4"
iai = "=0.1.1" # the benchmark code contains code based on `iai::main` and needs to be synchronized

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[features]
day01 = []
day02 = []
day03 = []
day04 = []
day05 = []
default = ["day01", "day02", "day03", "day04", "day05"]

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "iai"
harness = false
