[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.2", features = ["no-rng"]}
paste = "1"
rayon = "1.6.1"
tinyvec = { version = "1.6.0", features = ["rustc_1_57", "std"] }

[dev-dependencies]
cfg-if = "1"
criterion = "0.4"
iai = "=0.1.1" # the benchmark code contains code based on `iai::main` and needs to be synchronized

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[profile.profile]
inherits = "release"
debug = true

[features]
day01 = []
day02 = []
day03 = []
day04 = []
day05 = []
day06 = []
day07 = []
day08 = []
day09 = []
day10 = []
day11 = []
day12 = []
default = ["day01", "day02", "day03", "day04", "day05", "day06", "day07", "day08", "day09", "day10", "day11", "day12"]

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "iai"
harness = false
